--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@
  padding: 0;
  box-sizing: border-box;
 }
+
+body {
+ font-family: Arial, Helvetica, sans-serif;
+ background: #18181b;
+ color: lightslategray;
+
+ margin-top: 15rem;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+}
