--- a/style.css
+++ b/style.css
@@ -15,3 +15,17 @@ body {
  justify-content: center;
  align-items: center;
 }
+
+.titles {
+ display: flex;
+ gap: 5rem;
+ margin-bottom: .5rem;
+}
+
+.player,
+.cpu {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ margin-bottom: .5rem;
+}
