Add selectors and rules
- Added .title-one selector and rules
- Added .title-two selector and rules

--- a/style.css
+++ b/style.css
@@ -29,3 +29,10 @@ body {
  align-items: center;
  margin-bottom: .5rem;
 }
+
+.title-one,
+.title-two {
+ border-bottom: 2px solid white;
+ padding: .5rem;
+ margin-bottom: .5rem;
+}
